fix(dropdown): z-index

--- a/src/components/avatar/DropdownMenu.scss
+++ b/src/components/avatar/DropdownMenu.scss
@@ -6,6 +6,7 @@
   border-radius: 5px;
   top: 3rem;
   right: -0.2rem;
+  z-index: 999;
   background-color: #fff;
   font-size: 0.9rem;
 
